Fix background cover and weird scroll on mobile menu.

--- a/assets/css/print.css
+++ b/assets/css/print.css
@@ -651,7 +651,7 @@ h1 a, h2 a, h3 a, h4 a {
   bottom: 0;
   right: 0;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   overflow: hidden;
   -webkit-backdrop-filter: blur(3px) brightness(30%);
   background-color: transparent !important; }
