--- a/assets/stylesheets/layout/_navigation.scss
+++ b/assets/stylesheets/layout/_navigation.scss
@@ -140,7 +140,7 @@
   bottom: 0;
   right: 0;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   overflow: hidden;
 
   //Blur function for safari users
